--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ img[title="Cliquez ici pour agrandir l'image"] {
     background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
 }
 
+.section4-container {
+    display: flex;
+    flex-direction: row;
+}
+
 .bloc {
     width: 100%;
     clear: both;
@@ -940,25 +945,198 @@ a .black:hover {
     background-image: url("img/image-de-presentation.jpg");
 }
 
-
+.section1-container {
+    width: 100%;
+    height: 600px;
+}
 
 .section2-container {
-    background: linear-gradient(#66C4F7, #0290DF);
     width: 100%;
-    height: 500px;
+    height: 600px;
     color: #B1B1B1!important;
+    background: linear-gradient(#66C4F7, #0290DF);
+    /* background-image: url("IMAGE_URL"); fallback */
+    /* background-image: url("img/back1.png"); */
 }
+
+/* @keyframes test {
+    0% {
+      background-image: url("img/back1.png"), linear-gradient(#66C4F7, #0290DF), opacity(100%);
+    }
+    100% {
+      background: linear-gradient(#66C4F7, #0290DF), opacity(100%);
+    }
+  } */
+  
+
+.section2-bg1 {
+    height: 600px;
+}
+
+.section2-bg1:hover {
+    height: 10px;
+}
+
+.section2-bg2 {
+    width: 100%;
+    height: 600px;
+    margin-top: 0;
+    position: absolute;
+    background-image: url("img/back1.png"), linear-gradient(#66C4F7, #0290DF);
+}
+
+.section2-content {
+    opacity:0;
+}
+
+.section2-content:hover {
+    opacity:1;
+    transition: all 1s;
+}
+
+/* @keyframes fadein {
+    0% {
+      opacity: 0;
+    }
+    25% {
+      opacity: 0.2;
+    }
+    75% {
+      opacity: 0.8;
+    }
+    100% {
+      opacity: 1;
+    }
+}  */
 
 .section2-container .font-s6 {
     color: #B1B1B1!important;
+}
+
+.section3-container {
+    opacity:0;
+}
+
+.section3-container:hover {
+    opacity:1;
+    animation: test 1s 0.1s both;
+    /* transition: all 1s; */
+}
+
+@keyframes test {
+    0% {
+        opacity:0;
+    }
+    80% {
+        opacity:0.5;
+    }
+    100% {
+        opacity:1;
+    }
+}
+
+.section3-container-left {
+    opacity:0;
+}
+
+.section3-container:hover > .section3-container-left {
+    opacity:1;
+    /* transition: all 1s; */
+    animation: test2 2s 0.1s both;
+}
+
+.section3-container-right {
+    opacity:0;
+}
+
+.section3-container:hover > .section3-container-right {
+    opacity:1;
+    /* transition: all 1s; */
+    animation: test2 2s 0.1s both;
+}
+
+.section4-img {
+    height: 400px;
+    opacity:0;
+}
+
+.section4-text {
+    height: 400px;
+    opacity:0;
+}
+
+.section4-container:hover > .section4-img {
+    height: 400px;
+    opacity:1;
+    /* transition: all 1s; */
+    animation: test2 4s 0.1s both;
+}
+
+.section4-container:hover > .section4-text {
+    height: 400px;
+    opacity:1;
+    /* transition: all 1s; */
+    animation: test2 4s 0.1s both;
 }
 
 .section5-container {
     background: linear-gradient(#66C4F7, #0290DF);
     width: 100%;
     height: 400px;
+    margin-top: 50px;
     color: #B1B1B1!important;
 }
+
+@keyframes test2 {
+    0% {
+        width:0;
+        opacity:0;
+    }
+    50% {
+        width: 50%;
+        opacity:0.5;
+    }
+    100% {
+        width:100%;
+        opacity:1;
+    }
+}
+
+/* .section3-container-right {
+    width:100%;
+    opacity:0;
+}
+
+.section3-container-right:hover {
+    width: 100%;
+    opacity:1;
+    animation: test3 1s 1s both;
+}
+
+@keyframes test3 {
+    0% {
+        width:0;
+        opacity:0;
+    }
+    80% {
+        width: 80%;
+        opacity:0.5;
+    }
+    100% {
+        width:100%;
+        opacity:1;
+    }
+} */
+
+/* .section3-container-right {
+    width:0;
+}
+
+.section3-container-right:hover {
+    width: 100%;
+    transition: all 1s;
+} */
+
 
 
 
