--- a/css/contact.css
+++ b/css/contact.css
@@ -1,193 +1,318 @@
-li,
-ul {
-  list-style: none;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
+
+* {
+  margin: 0;
   padding: 0;
-  margin: 0;
+  box-sizing: border-box;
+    line-height: 1.6;
+  overflow: hidden;
 }
-.sec-title {
+
+body,
+input,
+textarea {
+  font-family: "Poppins", sans-serif;
+}
+
+.container5 {
   position: relative;
-  padding-bottom: 40px;
-}
-.sec-title .title {
-  position: relative;
-  color: #00b8ca;
-  font-size: 18px;
-  font-weight: 700;
-  padding-right: 50px;
-  margin-bottom: 15px;
-  display: inline-block;
-  text-transform: capitalize;
-}
-.sec-title .title:before {
-  position: absolute;
-  content: "";
-  right: 0;
-  bottom: 7px;
-  width: 40px;
-  height: 1px;
-  background-color: #bbb;
-}
-.sec-title h2 {
-  position: relative;
-  color: #252525;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.5em;
-  display: block;
-}
-.sec-title.light h2 {
-  color: #fff;
-}
-.contact-page-section {
-  position: relative;
-  padding-top: 110px;
-  padding-bottom: 110px;
-}
-.contact-page-section .inner-container {
-  position: relative;
-  z-index: 1;
-  background-color: #00b8ca;
-  box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.1);
-}
-.contact-page-section .form-column {
-  position: relative;
-  padding: 0 0 0 15px;
-}
-.contact-page-section .form-column .inner-column {
-  position: relative;
-  padding: 60px 45px 30px;
-  background-color: #fff;
-}
-.contact-page-section .info-column {
-  position: relative;
-}
-.contact-page-section .info-column .inner-column {
-  position: relative;
-  padding: 60px 35px;
-}
-.contact-page-section .info-column h2 {
-  position: relative;
-  color: #fff;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 1.4em;
-  margin-bottom: 45px;
-}
-.contact-page-section .info-column .list-info {
-  position: relative;
-  margin-bottom: 60px;
-}
-.contact-page-section .info-column .list-info li {
-  position: relative;
-  margin-bottom: 25px;
-  font-size: 18px;
-  color: #fff;
-  line-height: 1.8em;
-  padding-left: 45px;
-}
-.contact-page-section .info-column .list-info li:last-child {
-  margin-bottom: 0;
-}
-.contact-page-section .info-column .list-info li i {
-  position: absolute;
-  left: 0;
-  top: 8px;
-  color: #fff;
-  font-size: 30px;
-}
-.contact-form {
-  position: relative;
-}
-.contact-form .form-group {
-  position: relative;
-  margin-bottom: 20px;
-}
-.contact-form input[type="text"],
-.contact-form input[type="email"],
-.contact-form textarea {
-  position: relative;
-  display: block;
   width: 100%;
-  height: 60px;
-  color: #222;
-  font-size: 14px;
-  line-height: 38px;
-  padding: 10px 30px;
-  border: 1px solid #ddd;
+  min-height: 100vh;
+  padding: 2rem;
+  background-color: #fafafa;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form {
+  width: 100%;
+  max-width: 820px;
   background-color: #fff;
-  transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
+  border-radius: 10px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
-.contact-form input[type="text"]:focus,
-.contact-form input[type="email"]:focus,
-.contact-form textarea:focus {
-  border-color: #00b8ca;
-}
-.contact-form textarea {
-  height: 250px;
-  resize: none;
-}
-.contact-form .theme-btn {
-  font-size: 16px;
-  font-weight: 700;
-  margin-top: 10px;
-  text-transform: capitalize;
-  padding: 16px 39px;
-  border: 2px solid #00b8ca;
-  font-family: Arimo, sans-serif;
-  background: #00b8ca;
-  display: inline-block;
+
+.contact-form {
+ length : 300px;
   position: relative;
-  line-height: 24px;
-  cursor: pointer;
-  color: #fff;
 }
-.contact-form .theme-btn:hover {
-  color: #00b8ca;
-  border-color: #00b8ca;
-  background: 0 0;
+.contact-info{
+  background-color: #1abc9c;
 }
-.contact-form input.error,
-.contact-form select.error,
-.contact-form textarea.error {
-  border-color: red !important;
+
+
+.contact-form:before {
+  content: "";
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  background-color: #1abc9c;
+  transform: rotate(45deg);
+  top: 50px;
+  left: -13px;
 }
-.contact-form label.error {
-  display: block;
-  line-height: 24px;
-  padding: 5px 0 0;
-  margin: 0;
-  text-transform: uppercase;
-  font-size: 12px;
-  color: red;
+
+form {
+  padding: 2.3rem 2.2rem;
+  z-index: 10;
+  overflow: hidden;
+  position: relative;
+}
+
+.title {
+  color: black;
   font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+  margin-bottom: 0.7rem;
 }
-.social-icon-four {
+
+.input-container {
   position: relative;
+  margin: 1rem 0;
 }
-.social-icon-four li {
-  position: relative;
-  margin-right: 18px;
-  display: inline-block;
+
+.input {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  background: none;
+  outline: none;
+  resize: none;
+  border: 0;
+  font-family: "Montserrat", sans-serif;
+  transition: all 0.3s;
+  border-bottom: 2px solid #bebed2;
 }
-.social-icon-four li.follow {
+
+textarea.input {
+  padding: 0.8rem 1.2rem;
+  min-height: 150px;
+  border-radius: 22px;
+  resize: none;
+  overflow-y: auto;
+}
+
+.input-container label {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+  padding: 0 0.4rem;
+  color: black;
+  font-size: 0.9rem;
+  font-weight: 400;
+  pointer-events: none;
+  z-index: 1000;
+  transition: 0.5s;
+}
+
+.input-container.textarea label {
+  top: 1rem;
+  transform: translateY(0);
+}
+
+.btn {
+  padding: 0.6rem 1.3rem;
+  background-color: #fff;
+  border: 2px solid #fafafa;
+  font-size: 0.95rem;
+  color: #1abc9c;
+  line-height: 1;
+  border-radius: 25px;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  margin: 0;
+}
+
+.btn:hover {
+  background-color: transparent;
   color: #fff;
-  font-weight: 600;
-  font-size: 24px;
-  display: block;
-  margin-bottom: 20px;
 }
-.social-icon-four li a {
+
+.input-container span {
+  position: absolute;
+  top: 0;
+  left: 25px;
+  transform: translateY(-50%);
+  font-size: 0.8rem;
+  padding: 0 0.4rem;
+  color: transparent;
+  pointer-events: none;
+  z-index: 500;
+}
+
+.input-container span:before,
+.input-container span:after {
+  content: "";
+  position: absolute;
+  width: 10%;
+  opacity: 0;
+  transition: 0.3s;
+  height: 5px;
+  background-color: black;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.input-container span:before {
+  left: 50%;
+}
+
+.input-container span:after {
+  right: 50%;
+}
+
+.input-container.focus label {
+  top: 0;
+  transform: translateY(-50%);
+  left: 25px;
+  font-size: 0.8rem;
+}
+
+.input-container.focus span:before,
+.input-container.focus span:after {
+  width: 50%;
+  opacity: 1;
+}
+
+.contact-info {
+  padding: 2.3rem 2.2rem;
   position: relative;
-  font-size: 20px;
-  color: #fff;
-  -webkit-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  transition: all 0.3s ease;
 }
-.social-icon-four li a:hover {
-  color: #222;
+
+.contact-info .title {
+  color: black;
+}
+
+.text {
+  color: #333;
+  margin: 1.5rem 0 2rem 0;
+}
+
+.information {
+  display: flex;
+  color: #555;
+  margin: 0.7rem 0;
+  align-items: center;
+  font-size: 0.95rem;
+}
+
+.icon {
+  width: 28px;
+  margin-right: 0.7rem;
+}
+
+.social-media {
+  padding: 2rem 0 0 0;
+}
+
+.social-media p {
+  color: #333;
+}
+
+.social-icons {
+  display: flex;
+  margin-top: 0.5rem;
+}
+
+.social-icons a {
+  width: 35px;
+  height: 35px;
+  border-radius: 5px;
+  background: black;
+  color: #fff;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 0.5rem;
+  transition: 0.3s;
+}
+
+.social-icons a:hover {
+  transform: scale(1.05);
+}
+
+
+
+.square {
+  position: absolute;
+  height: 400px;
+  top: 50%;
+  left: 50%;
+  transform: translate(181%, 11%);
+  opacity: 0.2;
+}
+
+@media (max-width: 850px) {
+  .form {
+    grid-template-columns: 1fr;
+  }
+
+  .contact-info:before {
+    bottom: initial;
+    top: -75px;
+    right: 65px;
+    transform: scale(0.95);
+  }
+
+  .square {
+    transform: translate(140%, 43%);
+    height: 350px;
+  }
+
+
+  .text {
+    margin: 1rem 0 1.5rem 0;
+  }
+
+  .social-media {
+    padding: 1.5rem 0 0 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    padding: 1.5rem;
+  }
+
+ 
+  form,
+  .contact-info {
+    padding: 1.7rem 1.6rem;
+  }
+
+  .text,
+  .information,
+  .social-media p {
+    font-size: 0.8rem;
+  }
+
+  .title {
+    font-size: 1.15rem;
+  }
+
+  .social-icons a {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+  }
+
+  .icon {
+    width: 23px;
+  }
+
+  .input {
+    padding: 0.45rem 1.2rem;
+  }
+
+  .btn {
+    padding: 0.45rem 1.2rem;
+  }
 }
