--- a/css/contact.css
+++ b/css/contact.css
@@ -28,7 +28,7 @@ textarea {
 
 .form {
   width: 100%;
-  max-width: 820px;
+  max-width: 1000px;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
@@ -43,7 +43,7 @@ textarea {
   position: relative;
 }
 .contact-info{
-  background-color: #1abc9c;
+  background-color:  #0290DF;
 }
 
 
@@ -52,7 +52,7 @@ textarea {
   position: absolute;
   width: 26px;
   height: 26px;
-  background-color: #1abc9c;
+  background-color: linear-gradient(#66C4F7, #0290DF);
   transform: rotate(45deg);
   top: 50px;
   left: -13px;
@@ -193,13 +193,13 @@ textarea.input {
 }
 
 .text {
-  color: #333;
+  color: white;
   margin: 1.5rem 0 2rem 0;
 }
 
 .information {
   display: flex;
-  color: #555;
+  color: white;
   margin: 0.7rem 0;
   align-items: center;
   font-size: 0.95rem;
@@ -207,7 +207,8 @@ textarea.input {
 
 .icon {
   width: 28px;
-  margin-right: 0.7rem;
+  margin-right: 0.9rem;
+ 
 }
 
 .social-media {
